# we_back

./: .gitignore  harmonize_h5.py  pyproject.toml  test_config_filter.py  test_warnings.py
core/: builders.py  create_h5_artifact.py  create_h5_artifact_custom_length.py  create_h5_artifact_multi.py  cv.py  dataset.py  eeg_utils.py  enhanced_run_cv.py  eval_model.py  evaluation.py  logging.py  model_playground.py  multi_dataset.py  raw_dataset.py  run_cv.py  run_sweep.py  runner.py  sanity_test_model.py  schemas.py  spectral_dataset.py  train_model.py  training_loop.py  validate_kernel.py
examples/: calculate_all_spectral_params.py  calculate_avg_spectral_params.py  get_all_spectral_densities.py  get_iaftf.py  get_mf_transform.py  get_re.py  get_rp.py  get_sb.py  get_scf.py  get_se.py  get_se95.py  get_spectral_density.py  get_te.py  plot_all.py  plot_mf_sef95_2d.py  segment_level_model.py  segment_level_model_strat.py  write_dataset.py
models/: concatter.py  shallow_concatter.py  shallow_concatter_se.py  simple_2d.py  spectral_net.py  squeezer.py
playground/: playground_results_2.json  playground_results_3.json
scripts/: plot_all.py  test_torch.py
spectral/: individual_alpha_frequency_transition_frequency.py  median_frequency.py  relative_powers.py  renyi_entropy.py  shannon_entropy.py  spectral_95_limit_frequency.py  spectral_bandwidth.py  spectral_centroid.py  spectral_crest_factor.py  tsallis_entropy.py
tests/: debug_shannon.py  test_efficiency.py  test_entropies.py  test_package.py  test_renyi.py  test_shannon.py  test_tsallis.py
(+177 files in other folders)
