[project]
name = "we-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.14.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "pydantic>=2.8.0",
    "wandb>=0.21.3",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[tool.ruff]
exclude = ["tests", "scripts/plot_all.py", "examples"]
